# Prism

resources/files/ai_side_panel/: ADVANCED_FEATURES_README.md  BUILD.gn  PASSWORD_MANAGER_README.md  aiPasswordAgent.js  biometricAuth.js  browserSync.js  emergencyAccess.js  enterpriseFeatures.js  manifest.json  naturalLanguageCommands.js  passwordAudit.js  passwordContentScript.js  passwordHistory.js  passwordManager.css  passwordManager.js  passwordManagerBackground.js  passwordManagerCompleteUI.jsx  passwordManagerEnhanced.css  passwordManagerEnhancedUI.jsx  passwordManagerIntegration.js  passwordManagerUI.jsx  passwordSharing.js  secureNotes.js  smartCategories.js  totpManager.js  webauthn.js
